--- a/src/sample/register.fxml
+++ b/src/sample/register.fxml
@@ -1,1 +1,22 @@
-//heyheyheyheyhey
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Button layoutX="274.0" layoutY="334.0" mnemonicParsing="false" text="Cancel" />
+      <Button layoutX="270.0" layoutY="288.0" mnemonicParsing="false" text="Register" />
+      <TextField layoutX="226.0" layoutY="140.0" promptText="Username" />
+      <TextField layoutX="226.0" layoutY="188.0" promptText="Password" />
+      <TextField layoutX="226.0" layoutY="233.0" promptText="Confirm password" />
+      <Label layoutX="106.0" layoutY="14.0" prefHeight="131.0" prefWidth="389.0" text="REGISTER">
+         <font>
+            <Font size="90.0" />
+         </font>
+      </Label>
+   </children>
+</AnchorPane>
