--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,21 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <Button layoutX="272.0" layoutY="322.0" mnemonicParsing="false" text="Sign up" />
+        <Button layoutX="276.0" layoutY="273.0" mnemonicParsing="false" text="Log in" />
+        <TextField layoutX="226.0" layoutY="175.0" promptText="Username" />
+        <TextField layoutX="226.0" layoutY="223.0" promptText="Password" />
+        <Label layoutX="89.0" layoutY="37.0" prefHeight="104.0" prefWidth="473.0" text="HIOA CHAT">
+            <font>
+                <Font size="84.0" />
+            </font>
+        </Label>
+    </children>
+</AnchorPane>
